# student-management-system

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
src/: CMakeLists.txt  main.cpp  version.h.in
src/core/: database.cpp  database.h
tests/: CMakeLists.txt
